smd-ui/src/components/CreateChain/createChain.scss
.input {
  padding: 1%;
  margin-top: 1%;
  margin-left: 10%;
}

.create-chain-form .form-width {
  width: 100%;
}

.no-member {
  border-radius: 60px;
}

.member:hover {
  cursor: pointer !important;
  background: #30434D;
  border-radius: 60px;
}

.member-remove:hover {
  background-color: red !important;
}

.chain-dropzone {
  margin-left: 3px;
  border-radius: 20px !important;
}

